Logo Text Fixed

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,10 +1,10 @@
 ---
 import "@styles/services.scss";
-import Logo1 from "@assets/logos/logo-1.png";
-import Logo2 from "@assets/logos/logo-2.png";
-import Logo3 from "@assets/logos/logo-3.png";
-import Logo4 from "@assets/logos/logo-4.png";
-import Logo5 from "@assets/logos/logo-5.png";
+import Logo1 from "@assets/logos/Logo-1.png";
+import Logo2 from "@assets/logos/Logo-2.png";
+import Logo3 from "@assets/logos/Logo-3.png";
+import Logo4 from "@assets/logos/Logo-4.png";
+import Logo5 from "@assets/logos/Logo-5.png";
 import IphoneFrame from "@assets/iPhone13.png";
 const logos = [Logo1.src, Logo2.src, Logo3.src, Logo4.src, Logo5.src];
 import Layout from "@layouts/Layout.astro";
