--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,15 +1,15 @@
 ---
 import "@styles/home.scss";
 import Background_image from "@assets/hero-bac.png";
-import Logo1 from "@assets/logos/logo-1.png";
-import Logo2 from "@assets/logos/logo-2.png";
-import Logo3 from "@assets/logos/logo-3.png";
-import Logo4 from "@assets/logos/logo-4.png";
-import Logo5 from "@assets/logos/logo-5.png";
-import Logo6 from "@assets/logos/logo-6.png";
-import Logo7 from "@assets/logos/logo-7.png";
-import Logo8 from "@assets/logos/logo-8.png";
-import Logo9 from "@assets/logos/logo-9.png";
+import Logo1 from "@assets/logos/Logo-1.png";
+import Logo2 from "@assets/logos/Logo-2.png";
+import Logo3 from "@assets/logos/Logo-3.png";
+import Logo4 from "@assets/logos/Logo-4.png";
+import Logo5 from "@assets/logos/Logo-5.png";
+import Logo6 from "@assets/logos/Logo-6.png";
+import Logo7 from "@assets/logos/Logo-7.png";
+import Logo8 from "@assets/logos/Logo-8.png";
+import Logo9 from "@assets/logos/Logo-9.png";
 import faces from "@assets/faces.png";
 import ClientOne from "@assets/client-1.png";
 import ClientTwo from "@assets/client-2.png";
