--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -790,5 +790,36 @@ const { ctaHref = "/quote", ctaText = "Get a free quote" } = Astro.props;
 </svg>
     </a> -->
   </div>
-
 </section>
+
+  <script is:inline>
+      const slider = document.querySelector('.rf-pills');
+        let isDown = false;
+        let startX;
+        let scrollLeft;
+
+        slider.addEventListener('mousedown', (e) => {
+          isDown = true;
+          slider.classList.add('active');
+          startX = e.pageX - slider.offsetLeft;
+          scrollLeft = slider.scrollLeft;
+        });
+
+        slider.addEventListener('mouseleave', () => {
+          isDown = false;
+          slider.classList.remove('active');
+        });
+
+        slider.addEventListener('mouseup', () => {
+          isDown = false;
+          slider.classList.remove('active');
+        });
+
+        slider.addEventListener('mousemove', (e) => {
+          if(!isDown) return;
+          e.preventDefault();
+          const x = e.pageX - slider.offsetLeft;
+          const walk = (x - startX) * 1; // scroll speed
+          slider.scrollLeft = scrollLeft - walk;
+        });
+  </script>
