--- a/src/pages/hire/index.astro
+++ b/src/pages/hire/index.astro
@@ -88,7 +88,7 @@ const industriesWithDetails = [
   {
     icon: `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none"><path d="M8.33317 14.1251H5.17484C2.3665 14.1251 1.6665 13.4251 1.6665 10.6167V5.61673C1.6665 2.8084 2.3665 2.1084 5.17484 2.1084H13.9498C16.7582 2.1084 17.4582 2.8084 17.4582 5.61673" stroke="#90FCFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M8.3335 17.8917V14.125" stroke="#90FCFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.6665 10.7917H8.33317" stroke="#90FCFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M5.6167 17.8916H8.33337" stroke="#90FCFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M18.3336 10.6666V15.425C18.3336 17.4 17.8419 17.8916 15.8669 17.8916H12.9086C10.9336 17.8916 10.4419 17.4 10.4419 15.425V10.6666C10.4419 8.69162 10.9336 8.19995 12.9086 8.19995H15.8669C17.8419 8.19995 18.3336 8.69162 18.3336 10.6666Z" stroke="#90FCFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M14.3706 15.2084H14.3781" stroke="#90FCFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>`,
     title: "Technology",
-    body: "Software developers, IT support specialists, digital marketers.",
+    body: "Software developers, IT support specialists, digital marketers",
   },
   {
     icon: `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -98,7 +98,7 @@ const industriesWithDetails = [
   <path d="M5.625 10.8333H9.375" stroke="#90FCFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>`,
     title: "Accountancy Firms",
-    body: "Software developers, IT support specialists, cloud engineers, QA testers.",
+    body: "Auditors, bookkeepers, accountants, financial analysts",
   },
 ];
 
