Lorem text updated

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -309,8 +309,7 @@ const {
           Our <span class="accent">Journey</span>
         </h2>
         <p class="jr-sub mt-3 max-w-2xl mx-auto">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          From our humble beginnings to our current position as a trusted partner for businesses worldwide, our journey is one of continuous growth and innovation.
         </p>
       </header>
 
