--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -512,7 +512,13 @@ line-height: 24px; /* 133.333% */
 }
 
 .cta-sub {
-  color: rgba(255, 255, 255, 0.92);
+  color: #fff;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 42px; /* 131.25% */
+  letter-spacing: -0.32px;
 }
 
 /* Button */
