--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ import ContactSection from "@components/ContactForm";
           Schedule a <span class="accent">Discovery Call</span>
         </h2>
         <p class="ind-sub mt-3 text-base">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          During this 30-minute session, we’ll learn about your hiring needs, walk you through our talent sourcing process, and show you how your remote team can seamlessly integrate with your operations.
         </p>
       </div>
         <div class="calendly-inline-widget" data-url="https://calendly.com/mewan-yourteaminasia/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
