--- a/src/styles/contact-drawer.scss
+++ b/src/styles/contact-drawer.scss
@@ -13,14 +13,31 @@
   background: #fff;
 }
 .form-input::placeholder {
-  color: #9ca3af;
+  color: #464646;
 }
-.form label{
-   color: #111827;
+form label {
+  color: #111827;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 21px; /* 131.25% */
+  span {
+    color: #CBD4FF;
+    font-family: "Inter Tight";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19px; /* 135.714% */
+    a{
+      color: #FFF;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 19px;
+      text-decoration-line: underline;
+      text-decoration-style: solid;
+    }
+  }
 }
 
 input[type="checkbox"] {
