--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -23,7 +23,21 @@ form label {
   font-weight: 400;
   line-height: 21px; /* 131.25% */
   span {
-    color: #fff;
+    color: #CBD4FF;
+    font-family: "Inter Tight";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19px; /* 135.714% */
+    a{
+      color: #FFF;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 19px;
+      text-decoration-line: underline;
+      text-decoration-style: solid;
+    }
   }
 }
 
